--- a/Learning CSS/styles.css
+++ b/Learning CSS/styles.css
@@ -84,3 +84,11 @@ input[type="submit"]{
     border: 1px solid black;
     cursor: pointer;
 }
+
+/* Selector hijo */
+
+#menu > li > ul > li > a{
+    font-size: 18px;
+     color: red;
+     text-decoration: none;
+}
