--- a/Learning CSS/styles.css
+++ b/Learning CSS/styles.css
@@ -92,3 +92,13 @@ input[type="submit"]{
      color: red;
      text-decoration: none;
 }
+
+/* Prioridad */
+
+#saludo h1{
+    background: brown;
+}
+
+h1{
+    background: purple !important;
+}
