--- a/Learning CSS/02-fuentes/styles.css
+++ b/Learning CSS/02-fuentes/styles.css
@@ -1,11 +1,18 @@
+@font-face {
+    font-family: MontserratFuenteCustom;
+    src: url(fonts/Montserrat/Montserrat-Regular.ttf);
+}
+
 h1 {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Mansalva', cursive;
     font-style: italic;
+    text-transform: uppercase;
+    font-size: 45px;
 }
 
 h3 {
-    font-family: "Comic Sans MS";
-    font-size: 25px;
+    font-family: MontserratFuenteCustom, "Comic Sans MS";
+    font-size: 35px;
     font-weight: lighter;
 }
 p{
