--- a/Learning CSS/02-fuentes/styles.css
+++ b/Learning CSS/02-fuentes/styles.css
@@ -8,12 +8,28 @@ h1 {
     font-style: italic;
     text-transform: uppercase;
     font-size: 45px;
+
+    /* Colores */
+
+    /* Colores del sistema*/
+
+    color: mediumpurple;
+
+    /*Colores hexadecimales */
+    color: #eeeeee;
+
+    /*Colores RGB*/
+    color: rgb(255,255,107);
+    /*Colores RGBA*/
+
+    color: rgba(255,255,107,1);
 }
 
 h3 {
     font-family: MontserratFuenteCustom, "Comic Sans MS";
     font-size: 35px;
     font-weight: lighter;
+    color: olive;
 }
 p{
     font-family: sans-serif;
