--- a/Learning CSS/03-fondos/css/styles.css
+++ b/Learning CSS/03-fondos/css/styles.css
@@ -1,16 +1,29 @@
 body{
     background-color: #ccc;
-    background-image: url("/Learning\ CSS/03-fondos/img/paisaje.jpg");
+    /* background-image: url("/Learning\ CSS/03-fondos/img/paisaje.jpg");
     background-repeat: no-repeat;
     background-size: 100% 100%;
     background-attachment: fixed;
-    background-position: left bottom;
+    background-position: left bottom; */
+
+    color: black;
+    text-indent: 15px;
+    /*
+    word-spacing: 10px;
+    letter-spacing: 5px;
+    */
 }
 #caja {
     border: 5px solid black;
     padding: 10px;
     background-color: rgb(96, 109, 223);
     color: white;
+    font-family: "Open Sans";
+    text-align: center;
+    line-height: 50px;
+    text-transform: uppercase;
+    text-decoration: line-through;
+    
 }
 
 h2{
@@ -20,6 +33,6 @@ h2{
     border: 5px solid red;
 }
 
-p{
-    color: white;
+p {
+    text-align: justify;  
 }
