--- a/Learning CSS/04-cajas/styles.css
+++ b/Learning CSS/04-cajas/styles.css
@@ -2,8 +2,12 @@
     margin: 0px;
     padding: 0px;
 }
+body{
+    padding: 40px;
+}
 
-#caja1, #caja2{
+.caja{
+    display: block;
     width: 250px;
     height: 250px;
     background: lightblue;
@@ -15,13 +19,19 @@
     margin-right: 10px;
     padding: 20px;
     padding-bottom: 34px;
+    float: left;
 }
 
-p{
+.caja p{
     font-weight: bold;
     text-align: center;
     font-size: 20px;
     font-family: Arial;
     line-height: 230px;
 
+}
+
+.clearfix{
+    float: none;
+    clear: both;
 }
