--- a/Learning CSS/04-cajas/styles.css
+++ b/Learning CSS/04-cajas/styles.css
@@ -6,6 +6,11 @@ body{
     padding: 40px;
 }
 
+#cajas{
+    max-width: 1032px;
+    border: 1px solid black;
+}
+
 .caja{
     display: block;
     width: 250px;
