--- a/Learning CSS/05-ejercicio/style.css
+++ b/Learning CSS/05-ejercicio/style.css
@@ -1,7 +1,7 @@
 /*
 Ejercicio completo con HTML y CSS
 (HECHO) 1.Crear un documento HTML y vincularlo con un CSS
-2. Crear una estructura HTML que cuente con una CONTENEDOR GENERAL
+(Hecho)2. Crear una estructura HTML que cuente con una CONTENEDOR GENERAL
     CABECERA,MENU, BARRA LATERAL, SECCION DE CONTENIDO PRINCIPAL,
     ELEMENTOS DENTRO DEL CONTENEDOR PRINCIPAL, Y FOOTER
 3. Todo elcontenido debe estar dento del contenedor general y
