--- a/Learning CSS/05-ejercicio/style.css
+++ b/Learning CSS/05-ejercicio/style.css
@@ -4,10 +4,10 @@ Ejercicio completo con HTML y CSS
 (Hecho)2. Crear una estructura HTML que cuente con una CONTENEDOR GENERAL
     CABECERA,MENU, BARRA LATERAL, SECCION DE CONTENIDO PRINCIPAL,
     ELEMENTOS DENTRO DEL CONTENEDOR PRINCIPAL, Y FOOTER
-3. Todo elcontenido debe estar dento del contenedor general y
+(Hecho)3. Todo elcontenido debe estar dento del contenedor general y
    su ancho será de 1200px y estar centrado
-4. Header debe ocupar el 100% del ancho y tener un texto grande centrado
-5.Menu debe tener los elementos uno al lado del otro
+(Hecho)4. Header debe ocupar el 100% del ancho y tener un texto grande centrado
+(Hecho)5.Menu debe tener los elementos uno al lado del otro
 6. El contenido principal debe tener un ancho del 70%
 7. El contenido dentro del contenedor principal debe ser una cuadricula con 4 lineas de 2 cajas
 8.La barra lateraldebe tener un ancho del 30%
@@ -18,5 +18,56 @@ Ejercicio completo con HTML y CSS
     margin: 0px;
     padding: 0px;
     text-decoration: none;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     
+}
+
+#general{
+    width: 1200px;
+    border: 1px dashed #ccc;
+    margin: 0px auto;
+    margin-top:  20px;
+}
+#header{
+    width: 100%;
+    height: 100px;
+    background: rgb(15, 118, 236);
+    color: white;
+    text-align: center;
+    line-height: 100px; 
+}
+.clearfix{
+    float: none;
+    clear: both;
+}
+
+#menu{
+    background-color: #eee;
+}
+
+
+#menu ul li{
+    
+    /* display: inline-block; pone los objetos uno del lado del otro*/
+    /* display. bloc; secomporta como un elemento independiente */
+    display: block;
+    float: left;
+    border-right: 1px solid #ccc;
+}
+
+
+#menu ul li a{
+    padding: 15px;
+    display: block;
+    color: #444;
+}
+
+#menu ul li:hover{
+    background-color: rgb(12, 93, 185);
+    cursor: pointer;
+}
+
+
+#menu ul li:hover a{
+    color: white
 }
