--- a/Learning CSS/05-ejercicio/style.css
+++ b/Learning CSS/05-ejercicio/style.css
@@ -90,12 +90,20 @@ Ejercicio completo con HTML y CSS
 #contenido .caja{
     width: 40%;
     height: 250px;
-    background-color: red;
-    border: 5px solid blue;
+    background-color: #ccc;
+    border: 1px solid gray;
     color: white;
     float: left;
     margin: 20px;
     margin-left: 40px;
+    text-align: center;
+    line-height: 230px;
+    color:#444;
+    text-transform: uppercase;
+    box-shadow: 5px 5px 10px gray;
+}
+.sombra-interior{
+    box-shadow: 0px 0px 20px gray inset !important;
 }
 
 #contenido h1{
@@ -103,6 +111,8 @@ Ejercicio completo con HTML y CSS
     border-bottom: 1px solid #ccc;
     padding: 15px;
     color: #444;
+    /* text shadow  ejex ejey difuminado color */
+    text-shadow: 1px 1px 2px black;
 }
 
 
