--- a/Learning CSS/05-ejercicio/style.css
+++ b/Learning CSS/05-ejercicio/style.css
@@ -84,7 +84,10 @@ Ejercicio completo con HTML y CSS
     border: 1px solid red;
     float: left;
     min-height: 500px;
+    max-height: 650px;
     text-align: center;
+    overflow-y: scroll;
+    text-align: justify;
 }
 
 #contenido .caja{
@@ -101,6 +104,7 @@ Ejercicio completo con HTML y CSS
     color:#444;
     text-transform: uppercase;
     box-shadow: 5px 5px 10px gray;
+    border-radius: 50px 10px 4px 61px;
 }
 .sombra-interior{
     box-shadow: 0px 0px 20px gray inset !important;
