--- a/Learning CSS/05-ejercicio/style.css
+++ b/Learning CSS/05-ejercicio/style.css
@@ -130,3 +130,24 @@ footer{
     line-height: 55px;
     border-top:  1px solid #ccc;
 }
+.libre{
+    position: absolute;
+    top: 300px;
+    left: 50%;
+    border: 1px solid black;
+    background-color: red;
+    color: white;
+    width: 50px;
+    height: 50px;font-size: 13px;
+
+}
+.libre1{
+    z-index: 2;
+}
+
+.libre2{
+    background-color: green;
+    top: 280px;
+    left: 52%;
+    z-index: 3;
+}
