--- a/Learning CSS/05-ejercicio/style.css
+++ b/Learning CSS/05-ejercicio/style.css
@@ -151,3 +151,16 @@ footer{
     left: 52%;
     z-index: 3;
 }
+
+.fija{
+    position: fixed;
+    top: 50%;
+    left: 0px;
+    border: 1px solid black;
+    background-color: blue;
+    color: white;
+    width: 50px;
+    height: 50px;font-size: 13px;
+
+
+}
