--- a/Learning CSS/07-animaciones/styles.css
+++ b/Learning CSS/07-animaciones/styles.css
@@ -9,10 +9,55 @@
     text-decoration: none;
     border: 5px solid rgb(6,83,6);
     transition: border-radius 500ms, background 3s, border 500ms;
-
+   
 }
+
+
 #boton:hover{
     border-radius: 15px; 
     background-color: orangered;
     border: 5px solid red;
 }
+
+#caja{
+    margin-top:25px;
+    width: 250px;
+    height: 250px;
+    color: white;
+    background-color: lightseagreen;
+    border: 5px solid black;
+    font-size: 20px;
+    text-align: center;
+    line-height: 230px;
+    animation-name: desplazamiento;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+@keyframes desplazamiento{
+    0% {
+        margin-left:  0px;
+        transform: rotate(0deg);
+    }
+    50%{
+        margin-left:  1200px;
+        transform: rotate(100000deg);
+        border-radius: 100%;
+    }
+
+    75%{
+        background: red;
+    }
+
+    77%{
+        border: 10px dashed blue;
+    }
+
+
+    100%{
+        margin-left: 0px;
+    }
+}
+
+
