--- a/Maquetacion-1/css/styles.css
+++ b/Maquetacion-1/css/styles.css
@@ -59,10 +59,43 @@ body{
 #header h1:hover{
     text-shadow: 0px 2px 1px #333333, 0px 0px 4px #70b231;
 }
-
-
-
-
 #header h1 a{
     color: #70b231;
+}
+
+
+/*Barra de navegación*/
+#nav{
+    width: 100%;
+    height: 40px;
+    background-color: #333333;
+    color: white;
+    font-family: sans-serif,Helvetica, sans-serif;
+    font-size: 14 px;
+    box-shadow: 0px 0px 5px gray;
+}
+
+#nav ul{
+    list-style: none;
+    text-decoration: none;
+    margin: 0pc auto;
+    width: 1130px;
+}
+
+#nav > ul > li{
+    line-height: 40px;
+    float: left;
+    border-right: 1px solid gray;
+}
+
+#nav > ul > li > a{
+    display: block;
+    padding-left: 20px;
+    padding-right: 20px;
+    color: white;
+    text-decoration: none;
+}
+
+#nav > ul > li > a:first-child{
+    border-left: 1px solid gray;
 }
