--- a/Maquetacion-1/css/styles.css
+++ b/Maquetacion-1/css/styles.css
@@ -22,6 +22,18 @@ body{
     background-image: url(../img/paven.png);
 }
 
+/*ENLACES*/
+a{
+    color: #529125;
+    text-decoration: none;
+}
+a:visited{
+    color: #529125;
+}
+a:hover{
+    color: #285616;
+}
+
 /*FORMULARIOS*/
 
 input[type="text"],
@@ -200,7 +212,8 @@ button:active{
 
 /* BARRA LATERAL*/
 
-#aside{
+#aside, #frase{
+    clear: both;
     width: 200px;
     float: left;
     margin: 30px;
@@ -208,6 +221,13 @@ button:active{
     border: 1px solid #ccc;
     box-shadow: 0px 2px 2px #ccc;
     font-family: sans-serif,Arial, Helvetica, sans-serif;
+}
+
+#frase{
+    width: 180px;
+    padding: 10px;
+    font-size: 14px;
+    font-family: sans-serif,Arial,Helvetica;
 }
 
 #aside .widget{
@@ -233,8 +253,43 @@ button:active{
     text-align: center;
     padding-top: 2px;
     padding-bottom: 2px;
+    margin-bottom: 15px;
     background-color: #f2f3f2;
     border: 1px solid #ccc;
     border-left: none;
     border-right: none;
+}
+
+#aside li{
+    margin-top: 8px;
+    margin-bottom: 5px;
+    margin-left: 20px;
+    list-style: square;
+}
+
+/*FORMULARIOS BARRA LATERAL*/
+
+#aside div label,
+#aside div input[type="text"],
+#aside div input[type="email"],
+#aside div input[type="password"],
+#aside div a{
+    display: block;
+    width: 95%;
+    margin-top: 2px;
+    margin-bottom: 2px;
+}
+
+#aside div input[type="button"],
+#aside div input[type="submit"],
+#aside div button{
+    margin-top: 5px;
+    margin-bottom: 10px;
+
+}
+
+#aside input,
+#aside label{
+    margin: 0px auto;
+    text-align: center;
 }
