--- a/Maquetacion-1/css/styles.css
+++ b/Maquetacion-1/css/styles.css
@@ -11,6 +11,26 @@
 
 }
 
+@font-face{
+    font-family: "icons";
+    src: url("fonts/websymbols-regular-webfont.svg#WebSymbolRegular") format('svg'),
+        url("fonts/websymbols-regular-webfont.eot");
+    src: url("fonts/websymbols-regular-webfont.eot?#iefix") format("embedded-opentype"),
+        url("fonts/websymbols-regular-webfont.woff") format("woff"),
+        url("fonts/websymbols-regular-webfont.ttf") format("truetype");
+        font-weight: normal;
+        font-style: normal;
+
+}
+
+
+@font-face{
+    font-family: "fjalla";
+    src: url("fonts/FjallaOne-Regular.ttf") format('truetype');;
+    font-weight: normal;
+    font-style: normal;
+
+}
 
 /*ESTILOS GENERALES*/
 *{
@@ -213,7 +233,6 @@ button:active{
 /* BARRA LATERAL*/
 
 #aside, #frase{
-    clear: both;
     width: 200px;
     float: left;
     margin: 30px;
@@ -224,6 +243,7 @@ button:active{
 }
 
 #frase{
+    
     width: 180px;
     padding: 10px;
     font-size: 14px;
@@ -234,6 +254,16 @@ button:active{
 }
 .blue{
     color:#0c73f2 !important;
+}
+.orange{
+    color: #d69d2a !important;
+}
+
+.icon{
+    font-family: "icons";
+    float: left;
+    margin-right: 5px;
+    margin-top: -2px;
 }
 
 #aside .widget{
@@ -291,11 +321,62 @@ button:active{
 #aside div button{
     margin-top: 5px;
     margin-bottom: 10px;
-
 }
 
 #aside input,
 #aside label{
     margin: 0px auto;
     text-align: center;
+}
+
+/* SECCIONES  */
+#sections{
+    float: right;
+    width: 75%;
+    font-family: sans-serif,Arial,Helvetica;
+    margin-right: 20px;
+}
+
+#sections .titulo{
+    font-family: "fjalla";
+    font-size: 24px;
+    font-weight: normal;
+    letter-spacing: 1px;
+    text-align: center;
+    margin-top: -20px;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #ccc;
+}
+
+
+#sections section{
+    margin-top: 40px;
+    background-color: white;
+    padding: 20px;
+    border: 1px solid #ccc;
+    box-shadow: 0px 0px 4px #c9c9c9;
+    color: #333333;
+    font-size: 16px;
+    overflow: hidden;
+}
+#sections .article{
+    margin: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+#sections .date{
+    color: gray;
+    font-size: 14px;
+}
+
+#sections .stickerOne, .stickerTwo{
+    position: absolute;
+    margin-top: -38px;
+    z-index: 0;
+}
+
+#sections .stickerTwo{
+    margin-left: 862px;
 }
