--- a/Maquetacion-1/css/styles.css
+++ b/Maquetacion-1/css/styles.css
@@ -228,6 +228,7 @@ button:active{
     width: 1250px;
     min-height: 1100px;
     margin: 0px auto;
+    font-family: sans-serif,Arial, Helvetica;
 }
 
 /* BARRA LATERAL*/
@@ -385,4 +386,22 @@ button:active{
     margin-left: 862px;
 }
 
+#history{
+    float: right;
+    margin-top: 20px;
+    margin-right: 20px;
+    
+}
+/*PIE DE PAGINA*/
 
+#footer{
+    width: 100%;
+    margin: 0px auto;
+    text-align: center;
+    margin-top: 40px;
+    background-color: #333333;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: white;
+    font-family: sans-serif;
+}
