--- a/Maquetacion-1/css/styles.css
+++ b/Maquetacion-1/css/styles.css
@@ -404,4 +404,6 @@ button:active{
     padding-bottom: 10px;
     color: white;
     font-family: sans-serif;
+    font-size: 14px;
+    box-shadow: 0px 0px 2px geys;
 }
