--- a/Maquetacion-1/css/styles.css
+++ b/Maquetacion-1/css/styles.css
@@ -405,5 +405,5 @@ button:active{
     color: white;
     font-family: sans-serif;
     font-size: 14px;
-    box-shadow: 0px 0px 2px geys;
+    box-shadow: 0px 0px 2px gray;
 }
