--- a/Learning Responsive/styles.css
+++ b/Learning Responsive/styles.css
@@ -50,5 +50,42 @@ aside {
     text-align: center;
     border: 2px solid white;
     float: left;
-    margin: 30px;
+    margin: 27px;
+}
+
+
+/*RESPONSIVE*/
+/*Desde la anchura 0px hasta la anchura 888px de pantalla*/
+@media (max-width: 1324px){
+    #articles article{
+        width: 40%;
+        background-color: red;
+    }
+}
+
+@media (max-width: 1102px) {
+    #container {
+        overflow: hidden;
+    }
+
+    aside{
+        float: none;
+        min-height: auto;
+        line-height: 20px;
+        width: 91%;
+        padding: 35px;
+    }
+    #articles article{
+        width: 90%;
+        background-color: blue;
+    }
+    #articles{
+        width: 100%;
+    }
+}
+
+@media (max-width: 800px){
+    body{
+        background: salmon;
+    }
 }
