--- a/Maquetacion-2/css/styles.css
+++ b/Maquetacion-2/css/styles.css
@@ -38,7 +38,8 @@ body{
     margin: 0px auto;
 }
 
-.gear{
+
+.gear, .icon{
     font-family: "WebsymbolsRegular";
 }
 
@@ -128,4 +129,18 @@ body{
     text-shadow: 2px 2px 1px black;
     margin: 27px auto;
     text-align: center;
+}
+
+/* TARJETAS */
+.card {
+    float: left;
+    width: 205px;
+    height: 305px;
+    border: 1px solid #ccc;
+    box-shadow: 1px 1px 2px #ddd;
+    background-color: white;
+    overflow: hidden;
+    margin: 16px;
+    margin-top: 40px;
+    cursor: pointer;
 }
