--- a/Maquetacion-2/css/styles.css
+++ b/Maquetacion-2/css/styles.css
@@ -148,3 +148,28 @@ body{
 .card:last-child{
     margin-right: 0px;
 }
+.card .icon{
+    display: block;
+    width: 100%;
+    height: 130px;
+    font-size: 50px;
+    line-height: 110px;
+    text-align: center;
+    margin: 0px auto;
+}
+
+.card .category{
+    width: 100%;
+    height: 50px;
+    font-family: "TrebuchetMS";
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    color: #00538c;
+}
+.card .description{
+    font-family: "TrebuchetMS";
+    text-align: center;
+    color: #0370b9;
+    font-size: 15px;
+}
