--- a/Maquetacion-2/css/styles.css
+++ b/Maquetacion-2/css/styles.css
@@ -241,3 +241,47 @@ aside h3{
     color: #555555;
     padding-left: 6px;
 }
+.aside-box{
+    width: 90%;
+    height: 240px;
+    margin: 0px auto;
+    margin-top: 2px;
+    background-color: white;
+    box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.3),0px 3px 7px rgba(0, 0, 0, 0.3),0px 1px white, 0px -3px 2px rgba(0, 0, 0, 0.3) inset;
+}
+
+#login input[type="email"],
+#login input[type="password"]{
+    display: block;
+    margin: 0px auto;
+    margin-top: 20px;
+    width: 82%;
+    height: 30px;
+    border: 1px solid #ccc;
+    box-shadow: 1px 1px 1px #ccc inset;
+    border-radius: 5px;
+    padding-left: 30px;
+    color: #ccc;
+}
+
+#login input[type="email"]:focus,
+#login input[type="password"]:focus{
+    color: #555;
+    box-shadow: 1px 1px 3px grey inset;
+}
+
+#login #user,#login #password{
+    display: block;
+    text-align: center;
+    position: absolute;
+    margin-left: 15px;
+    margin-top: 6px;
+    height: 30px;
+}
+
+#login #password{
+    margin-left: 18px;
+    margin-top: 25px;
+    font-size: 20px;
+}
+
