--- a/Maquetacion-2/css/styles.css
+++ b/Maquetacion-2/css/styles.css
@@ -303,6 +303,7 @@ aside h3{
     font-size: 15px;
     font-family: "TrebuchetMS";
     font-weight: lighter;
+    margin-bottom: 20px;
     transition: all 300ms;
 }
 
@@ -311,4 +312,16 @@ aside h3{
 #login input[type="reset"]:hover,
 #login button:hover{
     box-shadow: 0px 0px 3px gray;
+}
+
+#login a{
+    display: block;
+    font-size: 14px;
+    text-decoration: none;
+    margin-left: 18px;
+    color: #555;
+}
+#login a:hover{
+    text-decoration: underline;
+    color: #2f78bc;
 }
