--- a/Maquetacion-2/css/styles.css
+++ b/Maquetacion-2/css/styles.css
@@ -250,6 +250,10 @@ aside h3{
     box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.3),0px 3px 7px rgba(0, 0, 0, 0.3),0px 1px white, 0px -3px 2px rgba(0, 0, 0, 0.3) inset;
 }
 
+#login{
+    padding-top: 10px;
+}
+
 #login input[type="email"],
 #login input[type="password"]{
     display: block;
@@ -324,4 +328,18 @@ aside h3{
 #login a:hover{
     text-decoration: underline;
     color: #2f78bc;
+}
+#social{
+    padding-top: 10px;
+    height: 180px;
+}
+
+#social a{
+    display: block;
+    color: #333;
+    text-decoration: none;
+    font-size: 30px;
+    margin-left: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
