--- a/Maquetacion-2/css/styles.css
+++ b/Maquetacion-2/css/styles.css
@@ -67,7 +67,13 @@ body{
     letter-spacing: 1px;
     cursor: pointer;
     overflow: hidden;
-    transition: all 300ms;
+    transition: all 200ms;
+}
+
+#logo:hover{
+    border-radius: 2px;
+    color: black;
+    background-color: #ccc;
 }
 #logo .gear{
     display: block;
@@ -75,6 +81,35 @@ body{
     font-size: 30px;
     margin-top: 8px;
     margin-left: 26px;
+    animation-name: rotate-gear;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+#logo:hover .gear{
+    animation: fromBellow 500ms linear;
+}
+
+@keyframes fromBellow{
+    0%{
+        transform: translateY(0%);
+    }
+    50%{
+        transform: translateY(200%);
+    }
+    100%{
+        transform: translateY(0%);
+    }
+}
+
+@keyframes rotate-gear{
+    from{
+        transform: rotateZ(0deg);
+    }
+    to{
+        transform: rotateZ(360deg);
+    }
 }
 #logo h3{
     display: block;
@@ -84,6 +119,19 @@ body{
     margin-right: 65px;
     transition: all 300ms;
 }
+
+#logo:hover h3{
+    animation: fromRight 300ms linear;
+}
+@keyframes fromRight{
+    from {
+        transform: translateX(200%);
+    }
+    to{
+        transform: translateX(0%);
+    }
+}
+
 
 #menu{
     float: right;
