--- a/Maquetacion-2/css/styles.css
+++ b/Maquetacion-2/css/styles.css
@@ -584,6 +584,38 @@ body{
     margin-top: 50px;
     line-height: 100px;
     text-align: center;
+    transition: all 1s;
+}
+
+#blog:hover{
+    background-color: #333;
+    border: 10px solid #37bcf9;
+    border-radius: 240px;
+    box-shadow: 0px 0px 10px gray;
+    animation: blink 10s infinite linear;
+}
+@keyframes blink{
+    0%{
+        border: 10px solid #37bcf9;
+    }
+    25%{
+        border: 10px solid green;
+    }
+    50%{
+        border: 10px solid yellow;
+    }
+    75%{
+        border: 10px solid white;
+    }
+    100%{
+        border: 10px solid #37bcf9;
+    }
+    
+}
+
+#blog:hover a{
+    color: white;
+    text-shadow: 1px 1px 1px black, 1px 2px 1px black, 1px 3px 1px black, 1px 4px 1px black, 1px 5px 1px black, 1px 6px 1px black;
 }
 #blog a{
     display: block;
@@ -637,6 +669,7 @@ body{
     text-align: left;
     margin: 20px;
     font-size: 25px;
+    list-style: none;
 }
 
 #footer ul li{
@@ -648,6 +681,12 @@ body{
 #footer ul li a{
     display: block;
     height: 40px;
+    transition: all 300ms;
+}
+#footer ul li a:hover{
+    padding-left: 40px;
+    color: white;
+    width: 100%;
 }
 
 
