--- a/Maquetacion-2/css/responsive.css
+++ b/Maquetacion-2/css/responsive.css
@@ -8,4 +8,17 @@
         width: 17%;
         margin: 1.45%;
     }
+    #articles{
+        width: 65%;
+    }
+    #articles article{
+        width: 97%;
+    }
+    #footer .wrap > div{
+        width: 25%;
+        margin: 4%;
+    }
+    #footer #browsers img{
+        width: 15%;
+    }
 }
