--- a/Maquetacion-2/css/responsive.css
+++ b/Maquetacion-2/css/responsive.css
@@ -3,10 +3,21 @@
         width: 90%;
         margin: 0px auto;
     }   
+    #banner h1{
+        font-size: 40px;
+        text-align: center;
+        margin: 33px auto; 
+    }
 
     .card{
         width: 17%;
         margin: 1.45%;
+    }
+    .card p{
+        display: block;
+        width: 90%;
+        margin: 0 auto;
+        text-align: center;
     }
     #articles{
         width: 65%;
@@ -20,5 +31,8 @@
     }
     #footer #browsers img{
         width: 15%;
+    }
+    #footer h5{
+        font-size: 30px;
     }
 }
