--- a/Maquetacion-2/css/responsive.css
+++ b/Maquetacion-2/css/responsive.css
@@ -133,3 +133,22 @@
         display: none;
     }
 }
+
+@media(max-width: 724px){
+    #header{
+        width: 100%;
+        height: 135px; 
+        padding-top: 10px;
+    }
+    #menu{
+        clear: both;
+        float: none;
+        width: 440px;
+        margin: 0px auto;
+    }
+    #logo {
+        float: none;
+        width: 200px;
+        margin: 0px auto;
+    }
+}
