--- a/Maquetacion-2/css/responsive.css
+++ b/Maquetacion-2/css/responsive.css
@@ -203,3 +203,74 @@
         font-size: 25px;
     }
 }
+
+@media (max-width: 563px){
+    .card {
+        width: 16.7%;
+    }
+}
+
+@media (max-width: 475px){
+    #header{
+        width: 100%;
+        height: 275px; 
+        padding-top: 10px;
+    }
+    #menu{
+        clear: both;
+        float: none;
+        width: 100%;
+        margin: 0px auto;
+    }
+
+    #menu ul li{
+        width: 100%;
+        line-height: 52px;
+    }
+
+    #menu ul li a:hover {
+        color: #37bcf9;
+        transform: scale(1,1);
+    }
+
+    #menu li{
+        width: 100%;
+    }
+    #banner{
+        font-size: 18px;
+        height: 85px;       
+    }
+    #lateral input[type="text"] {
+        width: 85%;
+    }
+    #lateral #boton-buscar{
+        width: 11%;
+    }
+    .card .icon{
+        font-size: 35px;
+    }
+    .card:hover .icon{
+        font-size: 35px;
+    }
+    .card .category{
+        font-size: 13px;
+    }
+
+    #articles .data {
+        float: none;
+        border-radius: 0px 0px 0px 0px;
+    }
+    #articles article h4 {
+        margin-top: 20px;
+    }
+    #login input[type="email"], #login input[type="password"]{
+        width: 85%;
+    }
+}
+
+
+@media (max-width: 377px){
+    #banner h1 {
+        font-size: 21px;
+    }
+}
