--- a/Learning SASS/_base.scss
+++ b/Learning SASS/_base.scss
@@ -1,9 +1,10 @@
 // sass --watch nombre.scss hojacss.css
+// Variables
 $fuente-tipica: sans-serif, Helvetica, Arial;
 $color-fondo: #ccc;
 $color-letra: red;
 $color-secundario: rgb(122, 33, 33);
-
+//Uso de variables
 body{
     background-color: $color-fondo;
 }
@@ -16,6 +17,7 @@ h1{
 p{
     color: $color-secundario;
 }
+//Anidación
 .caja{
 
     border: 1px solid black;
@@ -40,4 +42,18 @@ p{
             color: orange;
         }
     }
+}
+
+//Mixins / funciones
+@mixin crearBordes($color, $size, $shadow) {
+    border: $size solid $color; 
+    border-radius: $size;
+    box-shadow: 0px 0px $size $shadow;
+}
+
+.caja{
+    @include crearBordes(red, 10px, black);
+}
+.listado{
+    @include crearBordes(green, 5px, yellow);
 }
