--- a/Learning SASS/_base.scss
+++ b/Learning SASS/_base.scss
@@ -57,3 +57,29 @@ p{
 .listado{
     @include crearBordes(green, 5px, yellow);
 }
+
+//Herencia
+%alert-normal{
+    border: 1px solid gray;
+    background: #eee;
+    color: gray;
+    padding: 10px;
+    width: 80%;
+    margin: 20px auto;
+}
+
+.alert{
+    @extend %alert-normal;
+}
+
+.alert-danger{
+    @extend %alert-normal;
+    color: red;
+    border-color: red;
+}
+
+.alert-success{
+    @extend %alert-normal;
+    color: green;
+    border-color: green;
+}
