--- a/Learning SASS/_base.scss
+++ b/Learning SASS/_base.scss
@@ -83,3 +83,26 @@ p{
     color: green;
     border-color: green;
 }
+
+//Operadores
+.clearfix{  
+    clear: both;
+}
+
+h1{
+    font-size: 20px + 5px - 1px;
+}
+
+$caja: 200px;
+$wrap: 900px;
+.cajas{
+    width: $wrap;
+    margin: 0 auto;
+}
+
+
+.caja{
+    float: left;
+    width: $caja / $wrap * 100%;
+    margin: 10px;
+}
