--- a/Learning SASS/styles.css
+++ b/Learning SASS/styles.css
@@ -64,6 +64,25 @@ p {
   border-color: green;
 }
 
+.clearfix {
+  clear: both;
+}
+
+h1 {
+  font-size: 24px;
+}
+
+.cajas {
+  width: 900px;
+  margin: 0 auto;
+}
+
+.caja {
+  float: left;
+  width: 22.2222222222%;
+  margin: 10px;
+}
+
 h1 {
   text-decoration: underline;
 }
