--- a/Learning SASS/_base.scss
+++ b/Learning SASS/_base.scss
@@ -106,3 +106,22 @@ $wrap: 900px;
     width: $caja / $wrap * 100%;
     margin: 10px;
 }
+
+//CONDICIONALES - IF
+$color-fondo: blue;
+h1{
+    @if $color-fondo == #ccc{
+        color: black;
+    } @else if $color-fondo == black{
+        color: lightsalmon;
+    } @else{
+        color: pink;
+    }
+}
+//FOR
+
+
+//EACH
+
+
+//WHILE
