--- a/Learning SASS/_base.scss
+++ b/Learning SASS/_base.scss
@@ -119,9 +119,8 @@ h1{
     }
 }
 //FOR
-
-
-//EACH
-
-
-//WHILE
+@for $contador from 1 to 10 {
+    .listado ul li:nth-child(#{$contador}) {
+        font-size: $contador*2px;
+    }
+}
