--- a/Learning LESS/estilos.less
+++ b/Learning LESS/estilos.less
@@ -12,3 +12,16 @@
 h1{
     font-family: @fuente;
 }
+
+//Anidacion
+
+
+.informacion{
+    ul{
+        a{
+            color: green;
+            font-size: 18px;
+
+        }
+    }
+}
