--- a/Learning LESS/estilos.less
+++ b/Learning LESS/estilos.less
@@ -25,3 +25,13 @@ h1{
         }
     }
 }
+
+//Mixins
+.sombras(@size){
+    box-shadow: 0px 0px @size gray; 
+    text-shadow: 0px 0px @size gray;
+}
+
+.informacion{
+    .sombras(5px);
+}
