--- a/Learning Flexbox/styles.css
+++ b/Learning Flexbox/styles.css
@@ -4,7 +4,11 @@ body{
 }
 
 #layout{
-    display: flex;
+    display: inline-flex;
+    flex-direction: row;
+
+
+
     /* display: inline-flex; */
     border: 3px solid black ;
     padding: 5px;
