--- a/Learning Flexbox/styles.css
+++ b/Learning Flexbox/styles.css
@@ -4,10 +4,10 @@ body{
 }
 
 #layout{
-    display: inline-flex;
-    flex-direction: row;
-
-
+    display: flex;
+    /* flex-direction: row;
+    flex-wrap: wrap; */
+    flex-flow: row wrap;
 
     /* display: inline-flex; */
     border: 3px solid black ;
