--- a/Learning Flexbox/styles.css
+++ b/Learning Flexbox/styles.css
@@ -25,14 +25,18 @@ body{
     background-color: gray;
 }
 .red{
+    order: 3;
     background-color: red;
 }
 .green{
+    order: 1;
     background-color: green;
 }
 .blue{
+    order: 2;
     background-color: blue;
 }
 .orange{
+    order: 4;
     background-color: orange;
 }
