--- a/Learning Flexbox/styles.css
+++ b/Learning Flexbox/styles.css
@@ -15,10 +15,7 @@ body{
 }
 
 .caja{
-    flex-grow: 1;
-
-
-
+    flex-basis: calc((100%/3) - 68px );
     font-size: 20px;
     font-weight: bold;
     text-align: center;
@@ -29,23 +26,24 @@ body{
     background-color: gray;
 }
 .red{
-    flex-grow: 25;
+    /* flex-grow: 25; */
     /* order: 3; */
     background-color: red;
 }
 .green{
-    flex-grow: 7;
+    /* flex-grow: 7; */
     /* order: 1; */
     background-color: green;
 }
 .blue{
-    flex-grow: 0;
+    /* flex-grow: 0; */
     flex-shrink: 0;
     /* order: 2; */
     background-color: blue;
 }
 .orange{
-    flex-grow: 7;
+    flex-basis: 100%;
+    /* flex-grow: 7; */
     /* order: 4; */
     background-color: orange;
 }
