--- a/Learning Flexbox/styles.css
+++ b/Learning Flexbox/styles.css
@@ -1,4 +1,5 @@
 body{
+    --rojo: red;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
 }
@@ -15,7 +16,8 @@ body{
 }
 
 .caja{
-    flex-basis: calc((100%/3) - 68px );
+    flex-grow: 1;
+    /* flex-basis: calc((100%/3) - 68px ); */
     font-size: 20px;
     font-weight: bold;
     text-align: center;
@@ -28,7 +30,7 @@ body{
 .red{
     /* flex-grow: 25; */
     /* order: 3; */
-    background-color: red;
+    background-color: var(--rojo);
 }
 .green{
     /* flex-grow: 7; */
