--- a/Learning Flexbox/styles.css
+++ b/Learning Flexbox/styles.css
@@ -9,6 +9,8 @@ body{
     /* flex-direction: row;
     flex-wrap: wrap; */
     flex-flow: row wrap;
+    justify-content: space-evenly;
+
 
     /* display: inline-flex; */
     border: 3px solid black ;
@@ -16,7 +18,10 @@ body{
 }
 
 .caja{
-    flex-grow: 1;
+
+
+
+    /* flex-grow: 1; */
     /* flex-basis: calc((100%/3) - 68px ); */
     font-size: 20px;
     font-weight: bold;
@@ -44,7 +49,7 @@ body{
     background-color: blue;
 }
 .orange{
-    flex-basis: 100%;
+    /* flex-basis: 100%; */
     /* flex-grow: 7; */
     /* order: 4; */
     background-color: orange;
