--- a/Maquetacion-3/styles.css
+++ b/Maquetacion-3/styles.css
@@ -27,6 +27,7 @@
 }
 
 .logo{
+    flex-grow: 1;
     flex-basis: 65%;
 
     padding: 10px;
@@ -41,5 +42,33 @@
     font-style: italic;
     font-weight: 800;
     font-size: 35px;
+}
+
+#menu{
+    flex-grow: 1;
+    flex-basis: 30%;
+    height: 100%;
+    padding-right: 20px;
+}
+
+#menu ul{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
     
+    height: 100%;
+}
+
+#menu a{
+    text-transform: uppercase;
+    color: #444;
+    padding: 10px;
+    transition: all 300ms;
+}
+
+#menu a:hover{
+    background: #ccc;
+    color: white;
 }
