--- a/Maquetacion-3/styles.css
+++ b/Maquetacion-3/styles.css
@@ -85,5 +85,25 @@
     display: flex;
     justify-content: space-between;
     flex-basis: 80%;
+}
+
+.project{
+    flex-grow:  1;
+    flex-basis: 250px;
+    margin-bottom: 25px;
     margin-right: 20px;
+    border: 1px solid #ccc;
+}
+
+.project img{ 
+    width: 100%;
+}
+
+.project-info{
+    padding: 10px;
+}
+.project-info a{
+    font-size: 16px;
+    color: black;
+    transition: all 300ms;
 }
