--- a/Maquetacion-3/styles.css
+++ b/Maquetacion-3/styles.css
@@ -107,3 +107,11 @@
     color: black;
     transition: all 300ms;
 }
+
+.project-info a:hover{
+    color: green;
+}
+
+.project-info p{
+    color: gray;
+}
