--- a/Maquetacion-3/styles.css
+++ b/Maquetacion-3/styles.css
@@ -115,3 +115,44 @@
 .project-info p{
     color: gray;
 }
+
+#aside{
+    flex-basis: 15%;
+    margin-right: 30px;
+    padding: 15px;
+
+
+    display: flex;
+    flex-direction: column;
+    flex: wrap;
+}
+
+#aside h2{
+    display: block;
+    width: 100%;
+    font-size: 18px;
+    font-weight: 100;
+    color: #444;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+    border-bottom:1px solid rgba(225,225,226, 0.8);
+    text-align: center;
+}
+
+#aside ul li{
+    padding-bottom: 20px;
+}
+
+#aside a{
+    display: block;
+    padding: 20px;
+    background-color: #eee;
+    color: #444;
+    text-align: center;
+    transition: all 300ms;
+    text-transform: uppercase;
+}
+
+#aside a:hover{
+    background-color: #eee;
+}
