Footer con flex

--- a/Maquetacion-3/styles.css
+++ b/Maquetacion-3/styles.css
@@ -30,6 +30,11 @@
     flex-grow: 1;
     flex-basis: 65%;
 
+    font-family: Helvetica;
+    font-style: italic;
+    font-weight: 800;
+    font-size: 35px;
+    
     padding: 10px;
     margin-left: 20px;
     color: black;
@@ -156,4 +161,31 @@
 #aside a:hover{
     background-color: #444;
     color: #eee;
+}
+
+#footer{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-end;
+
+    height: 120px;
+    align-items: center;
+    border-top:1px solid rgba(225,225,226, 0.8);
+
+}
+
+#footer .logo{
+    opacity: 0.5;
+    flex-basis: auto;
+    flex-grow: 1;
+    order: 2;
+
+    text-align: right;
+    margin-right: 20px;
+}
+
+#footer .info{
+    flex-grow: 1;
+    order: 1;
+    margin-left: 20px;
 }
