--- a/Maquetacion-3/styles.css
+++ b/Maquetacion-3/styles.css
@@ -193,6 +193,10 @@
 
 
 @media (max-width: 1340px){
+
+    #header{
+        text-align: center;
+    }
     #menu ul{
         align-items: flex-start;
         justify-content: space-evenly;
