--- a/Maquetacion-3/styles.css
+++ b/Maquetacion-3/styles.css
@@ -211,7 +211,12 @@
         margin-left: 20px;
         flex-basis: 100%;
         text-align: center;
-
-
+        margin: 0px;
+    }
+    #footer .logo {
+        flex-grow: 1;
+        ORDER: 1;
+        flex-basis: 100%;
+        text-align: center;
     }
 }
