--- a/Maquetacion-3/styles.css
+++ b/Maquetacion-3/styles.css
@@ -205,6 +205,16 @@
 }
 
 @media (max-width: 603px){
+    
+    #content{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+
     #footer .info {
         flex-grow: 1;
         ORDER: 2;
@@ -218,5 +228,7 @@
         ORDER: 1;
         flex-basis: 100%;
         text-align: center;
+        margin: 0px;
     }
+
 }
