--- a/Maquetacion-3/styles.css
+++ b/Maquetacion-3/styles.css
@@ -215,6 +215,27 @@
         padding-bottom: 20px;
     }
 
+    #aside{
+        margin-right: 0px;
+    }
+
+
+    #aside ul{
+        justify-content: space-between;
+        display: flex;
+        flex-flow: row wrap;
+    }
+
+    #aside ul li{
+        flex-grow: 1;
+        margin-right: 5px;
+        margin-right: 5px;
+    }
+    .project{
+        margin-right: 10px;
+        margin-left: 10px;
+    }
+
     #footer .info {
         flex-grow: 1;
         ORDER: 2;
