--- a/Learning CSS Grid/styles.css
+++ b/Learning CSS Grid/styles.css
@@ -1,3 +1,30 @@
 body{
+    font-family: sans-serif;
+    text-align: center;
+}
+.layout{
+    border: 3px solid orangered;
+}
+
+.layout .caja{
+    font-size:  20px;
+    font-weight: bold;
+    color: white;
+    padding: 20px;
+    border: 4px solid #222;
+    margin: 10px;
+    background-color: gray;
+}
+
+.layout .red{
+    background-color: red;
+}
+.layout .blue{
     background-color: blue;
+}
+.layout .green{
+    background-color: green;
+}
+.layout .pink{
+    background-color: palevioletred;
 }
