--- a/Learning CSS Grid/styles.css
+++ b/Learning CSS Grid/styles.css
@@ -3,6 +3,14 @@ body{
     text-align: center;
 }
 .layout{
+    width: 1200px;
+    margin: 0 auto;
+    /* Definir el grid layput */
+    display: grid;
+    grid-template-columns: 50% 45%;
+    /* Espacio entre elementos grid */
+    grid-gap: 10px;
+    padding: 10px;
     border: 3px solid orangered;
 }
 
@@ -12,7 +20,6 @@ body{
     color: white;
     padding: 20px;
     border: 4px solid #222;
-    margin: 10px;
     background-color: gray;
 }
 
