--- a/Learning CSS Grid/styles.css
+++ b/Learning CSS Grid/styles.css
@@ -7,7 +7,9 @@ body{
     margin: 0 auto;
     /* Definir el grid layput */
     display: grid;
-    grid-template-columns: 50% 45%;
+
+    grid-template-columns: repeat(4, 1fr);
+    /* grid-template-columns: repeat(2, calc(25% - 10px)) 15% 35%; */
     /* Espacio entre elementos grid */
     grid-gap: 10px;
     padding: 10px;
