--- a/Learning CSS Grid/styles.css
+++ b/Learning CSS Grid/styles.css
@@ -9,7 +9,7 @@ body{
     /* Definir el grid layput */
     display: grid;
 
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2,1fr) 3fr;
     /* grid-template-columns: repeat(2, calc(25% - 10px)) 15% 35%; */
     /* Espacio entre elementos grid */
@@ -28,20 +28,27 @@ body{
 }
 
 .layout .red{
+    grid-column-start: 1;
+    grid-column-end: 4;
     background-color: red;
 }
 .layout .blue{
+    grid-column: 2 / 4;
     background-color: blue;
 }
 .layout .green{
     background-color: green;
 }
 .layout .pink{
+    grid-column: 1 / 3;
     background-color: palevioletred;
 }
 .layout .orange{
     background-color: orange;
 }
 .layout .lightblue{
+    /* grid-column-start: 1;
+    grid-column-end: 3; */
+    grid-column: 1 / 4;
     background-color: lightblue;
 }
