--- a/Learning CSS Grid/styles.css
+++ b/Learning CSS Grid/styles.css
@@ -4,13 +4,13 @@ body{
 }
 .layout{
     width: 1200px;
-    height: 400px;
+    height: 600px;
     margin: 0 auto;
     /* Definir el grid layput */
     display: grid;
 
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2,1fr) 3fr;
+    grid-template-rows: repeat(2,1fr) 3fr repeat(2,1fr);
     /* grid-template-columns: repeat(2, calc(25% - 10px)) 15% 35%; */
     /* Espacio entre elementos grid */
     grid-gap: 10px;
@@ -37,18 +37,22 @@ body{
     background-color: blue;
 }
 .layout .green{
+    grid-row-start: 2;
+    grid-row-end: 6;
     background-color: green;
 }
 .layout .pink{
-    grid-column: 1 / 3;
+    grid-column: 2 / 3;
+    grid-row:  3 / 5;
     background-color: palevioletred;
 }
 .layout .orange{
+    grid-row: 3 / 5;
     background-color: orange;
 }
 .layout .lightblue{
     /* grid-column-start: 1;
     grid-column-end: 3; */
-    grid-column: 1 / 4;
+    grid-column: 2 / 4;
     background-color: lightblue;
 }
