CSS basico del ejercicio con Grid

--- a/Learning CSS Grid/styles.css
+++ b/Learning CSS Grid/styles.css
@@ -2,6 +2,44 @@ body{
     font-family: sans-serif;
     text-align: center;
 }
+
+#website{
+    width: 75%;
+    height: 100vh;
+    margin: 0 auto;
+    border: 1px solid #ccc;
+}
+
+#cabecera{
+    background-color: blue;
+    color: white;
+}
+
+#menu{
+    background-color: lightblue;
+    color: black;
+}
+
+#contenido{
+    background-color: #eee;
+}
+
+#contenido article{
+    background-color: #ccc;
+    border: 1px solid #555;
+}
+
+
+#lateral{
+    background-color: orange;
+    color :white;
+}
+
+#pie-pagina{
+    background-color: black;
+    color:white
+}
+/* ******************* EJEMPLOS ********************* */
 .layout{
     width: 80%;
     height: 600px;
