Grid dentro de Grid

--- a/Learning CSS Grid/styles.css
+++ b/Learning CSS Grid/styles.css
@@ -2,25 +2,45 @@ body{
     font-family: sans-serif;
     text-align: center;
 }
-
+#website *{
+    margin: 0px;
+    padding: 0px;
+}
 #website{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: 150px 70px 1fr 70px;
     width: 75%;
-    height: 100vh;
+    height: 1000px;
     margin: 0 auto;
     border: 1px solid #ccc;
 }
 
 #cabecera{
+    grid-column: 1 / 6;
     background-color: blue;
     color: white;
 }
 
 #menu{
+    grid-column: 1 / 6;
     background-color: lightblue;
     color: black;
 }
 
+#menu ul{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    list-style: none;
+}
+
 #contenido{
+    grid-column: 1/ 5 ;
+
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 25px;
+    padding: 20px;
     background-color: #eee;
 }
 
@@ -31,11 +51,13 @@ body{
 
 
 #lateral{
+    grid-column: 5 / 6;
     background-color: orange;
     color :white;
 }
 
 #pie-pagina{
+    grid-column: 1 / 6;
     background-color: black;
     color:white
 }
