--- a/Maquetacion-4/styles.css
+++ b/Maquetacion-4/styles.css
@@ -159,6 +159,11 @@
 }
 
 #footer{
+    display: grid;
+    grid-template-columns: 1fr 25%;
+    align-items: center;
+    justify-content: start;
+
 
     height: 120px;
     align-items: center;
@@ -169,7 +174,7 @@
 #footer .logo{
     opacity: 0.5;
 
-    text-align: right;
+    text-align: left;
     margin-right: 20px;
 }
 
